// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the GetResults component should render correctly when score is "excellent" 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Container))>
    <div>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-header-1"
        item={true}
        lg={5}
      >
        <WithStyles(ForwardRef(Typography))
          gutterBottom={true}
          variant="h1"
        >
          All tests passed!
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))
          gutterBottom={true}
          variant="body1"
        >
          As far as we can tell, your video should be working. If you're still experiencing issues, download your report results and send to your network administrator.
        </WithStyles(ForwardRef(Typography))>
        <div
          className="makeStyles-buttonContainer-2"
        >
          <WithStyles(ForwardRef(Button))
            className="makeStyles-downloadButton-6"
            color="primary"
            onClick={[MockFunction]}
            variant="contained"
          >
            <DownloadIcon />
            Download report results
          </WithStyles(ForwardRef(Button))>
          <WithStyles(ForwardRef(Button))
            className="makeStyles-restartButton-7"
            onClick={[Function]}
            variant="outlined"
          >
            Restart test
          </WithStyles(ForwardRef(Button))>
        </div>
        <Hidden
          mdDown={true}
        >
          <img
            alt="Success"
            className="makeStyles-illustration-8"
            src="test-file-stub"
          />
        </Hidden>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-resultsList-3"
        item={true}
        lg={5}
      >
        <div
          className="makeStyles-resultContainer-4"
        >
          <div
            className="makeStyles-iconContainer-5"
          >
            <CheckMark />
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-gutterBottom-10"
              variant="h3"
            >
              Device & Network Setup
            </WithStyles(ForwardRef(Typography))>
          </div>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-gutterBottom-10"
            variant="body1"
          >
            Audio and video successfully received from your hardware and browser.
          </WithStyles(ForwardRef(Typography))>
          <div
            className="makeStyles-buttonContainer-2"
          >
            <WithStyles(ForwardRef(Button))
              onClick={[Function]}
              variant="outlined"
            >
              Review hardware
            </WithStyles(ForwardRef(Button))>
            <WithStyles(ForwardRef(Button))
              onClick={[Function]}
              variant="outlined"
            >
              Review browser
            </WithStyles(ForwardRef(Button))>
          </div>
        </div>
        <div
          className="makeStyles-resultContainer-4"
        >
          <div
            className="makeStyles-iconContainer-5"
          >
            <CheckMark />
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-gutterBottom-10"
              variant="h3"
            >
              Connectivity
            </WithStyles(ForwardRef(Typography))>
          </div>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-gutterBottom-10"
            variant="body1"
          >
            All connections are working successfully.
          </WithStyles(ForwardRef(Typography))>
          <WithStyles(ForwardRef(Button))
            onClick={[Function]}
            variant="outlined"
          >
            Review connectivity
          </WithStyles(ForwardRef(Button))>
        </div>
        <div
          className="makeStyles-resultContainer-4"
        >
          <div
            className="makeStyles-iconContainer-5"
          >
            <CheckMark />
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-gutterBottom-10"
              variant="h3"
            >
              Quality & Performance
            </WithStyles(ForwardRef(Typography))>
          </div>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-gutterBottom-10"
            variant="body1"
          >
            Awesome! Your expected call quality is 
            <strong>
              excellent
            </strong>
             and overall performance looks
             good
            .
          </WithStyles(ForwardRef(Typography))>
          <WithStyles(ForwardRef(Button))
            onClick={[Function]}
            variant="outlined"
          >
            Review performance
          </WithStyles(ForwardRef(Button))>
        </div>
      </WithStyles(ForwardRef(Grid))>
    </div>
  </WithStyles(ForwardRef(Container))>
</Fragment>
`;

exports[`the GetResults component should render correctly when score is "good" 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Container))>
    <div>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-header-1"
        item={true}
        lg={5}
      >
        <WithStyles(ForwardRef(Typography))
          gutterBottom={true}
          variant="h1"
        >
          All tests passed!
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))
          gutterBottom={true}
          variant="body1"
        >
          As far as we can tell, your video should be working. If you're still experiencing issues, download your report results and send to your network administrator.
        </WithStyles(ForwardRef(Typography))>
        <div
          className="makeStyles-buttonContainer-2"
        >
          <WithStyles(ForwardRef(Button))
            className="makeStyles-downloadButton-6"
            color="primary"
            onClick={[MockFunction]}
            variant="contained"
          >
            <DownloadIcon />
            Download report results
          </WithStyles(ForwardRef(Button))>
          <WithStyles(ForwardRef(Button))
            className="makeStyles-restartButton-7"
            onClick={[Function]}
            variant="outlined"
          >
            Restart test
          </WithStyles(ForwardRef(Button))>
        </div>
        <Hidden
          mdDown={true}
        >
          <img
            alt="Success"
            className="makeStyles-illustration-8"
            src="test-file-stub"
          />
        </Hidden>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-resultsList-3"
        item={true}
        lg={5}
      >
        <div
          className="makeStyles-resultContainer-4"
        >
          <div
            className="makeStyles-iconContainer-5"
          >
            <CheckMark />
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-gutterBottom-10"
              variant="h3"
            >
              Device & Network Setup
            </WithStyles(ForwardRef(Typography))>
          </div>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-gutterBottom-10"
            variant="body1"
          >
            Audio and video successfully received from your hardware and browser.
          </WithStyles(ForwardRef(Typography))>
          <div
            className="makeStyles-buttonContainer-2"
          >
            <WithStyles(ForwardRef(Button))
              onClick={[Function]}
              variant="outlined"
            >
              Review hardware
            </WithStyles(ForwardRef(Button))>
            <WithStyles(ForwardRef(Button))
              onClick={[Function]}
              variant="outlined"
            >
              Review browser
            </WithStyles(ForwardRef(Button))>
          </div>
        </div>
        <div
          className="makeStyles-resultContainer-4"
        >
          <div
            className="makeStyles-iconContainer-5"
          >
            <CheckMark />
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-gutterBottom-10"
              variant="h3"
            >
              Connectivity
            </WithStyles(ForwardRef(Typography))>
          </div>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-gutterBottom-10"
            variant="body1"
          >
            All connections are working successfully.
          </WithStyles(ForwardRef(Typography))>
          <WithStyles(ForwardRef(Button))
            onClick={[Function]}
            variant="outlined"
          >
            Review connectivity
          </WithStyles(ForwardRef(Button))>
        </div>
        <div
          className="makeStyles-resultContainer-4"
        >
          <div
            className="makeStyles-iconContainer-5"
          >
            <CheckMark />
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-gutterBottom-10"
              variant="h3"
            >
              Quality & Performance
            </WithStyles(ForwardRef(Typography))>
          </div>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-gutterBottom-10"
            variant="body1"
          >
            Awesome! Your expected call quality is 
            <strong>
              good
            </strong>
             and overall performance looks
             ok
            .
          </WithStyles(ForwardRef(Typography))>
          <WithStyles(ForwardRef(Button))
            onClick={[Function]}
            variant="outlined"
          >
            Review performance
          </WithStyles(ForwardRef(Button))>
        </div>
      </WithStyles(ForwardRef(Grid))>
    </div>
  </WithStyles(ForwardRef(Container))>
</Fragment>
`;

exports[`the GetResults component should render correctly when score is "poor" 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Container))>
    <div>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-header-1"
        item={true}
        lg={5}
      >
        <WithStyles(ForwardRef(Typography))
          gutterBottom={true}
          variant="h1"
        >
          Some tests failed
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))
          gutterBottom={true}
          variant="body1"
        >
          <strong>
            One out of three 
          </strong>
          tests failed – use this list to solve common video issues and restart the test. If you can’t easily solve the problem(s), download report results and send to your network administrator.
        </WithStyles(ForwardRef(Typography))>
        <div
          className="makeStyles-buttonContainer-2"
        >
          <WithStyles(ForwardRef(Button))
            className="makeStyles-downloadButton-6"
            color="primary"
            onClick={[MockFunction]}
            variant="contained"
          >
            <DownloadIcon />
            Download report results
          </WithStyles(ForwardRef(Button))>
          <WithStyles(ForwardRef(Button))
            className="makeStyles-restartButton-7"
            onClick={[Function]}
            variant="outlined"
          >
            Restart test
          </WithStyles(ForwardRef(Button))>
        </div>
        <Hidden
          mdDown={true}
        >
          <img
            alt="Some Failed"
            className="makeStyles-illustration-8"
            src="test-file-stub"
          />
        </Hidden>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-resultsList-3"
        item={true}
        lg={5}
      >
        <div
          className="makeStyles-resultContainer-4"
        >
          <div
            className="makeStyles-iconContainer-5"
          >
            <CheckMark />
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-gutterBottom-10"
              variant="h3"
            >
              Device & Network Setup
            </WithStyles(ForwardRef(Typography))>
          </div>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-gutterBottom-10"
            variant="body1"
          >
            Audio and video successfully received from your hardware and browser.
          </WithStyles(ForwardRef(Typography))>
          <div
            className="makeStyles-buttonContainer-2"
          >
            <WithStyles(ForwardRef(Button))
              onClick={[Function]}
              variant="outlined"
            >
              Review hardware
            </WithStyles(ForwardRef(Button))>
            <WithStyles(ForwardRef(Button))
              onClick={[Function]}
              variant="outlined"
            >
              Review browser
            </WithStyles(ForwardRef(Button))>
          </div>
        </div>
        <div
          className="makeStyles-resultContainer-4"
        >
          <div
            className="makeStyles-iconContainer-5"
          >
            <CheckMark />
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-gutterBottom-10"
              variant="h3"
            >
              Connectivity
            </WithStyles(ForwardRef(Typography))>
          </div>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-gutterBottom-10"
            variant="body1"
          >
            All connections are working successfully.
          </WithStyles(ForwardRef(Typography))>
          <WithStyles(ForwardRef(Button))
            onClick={[Function]}
            variant="outlined"
          >
            Review connectivity
          </WithStyles(ForwardRef(Button))>
        </div>
        <div
          className="makeStyles-resultContainer-4"
        >
          <div
            className="makeStyles-iconContainer-5"
          >
            <SmallError />
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-gutterBottom-10"
              variant="h3"
            >
              Quality & Performance
            </WithStyles(ForwardRef(Typography))>
          </div>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-gutterBottom-10"
            variant="body1"
          >
            Your overall score is 
            <strong>
              poor
            </strong>
             which means that your connection isn't good enough to run video properly. Try out these tips and rerun the test.
          </WithStyles(ForwardRef(Typography))>
          <WithStyles(ForwardRef(Button))
            onClick={[Function]}
            variant="outlined"
          >
            Review performance
          </WithStyles(ForwardRef(Button))>
        </div>
      </WithStyles(ForwardRef(Grid))>
    </div>
  </WithStyles(ForwardRef(Container))>
</Fragment>
`;

exports[`the GetResults component should render correctly when score is "suboptimal" 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Container))>
    <div>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-header-1"
        item={true}
        lg={5}
      >
        <WithStyles(ForwardRef(Typography))
          gutterBottom={true}
          variant="h1"
        >
          Some tests failed
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))
          gutterBottom={true}
          variant="body1"
        >
          <strong>
            One out of three 
          </strong>
          tests failed – use this list to solve common video issues and restart the test. If you can’t easily solve the problem(s), download report results and send to your network administrator.
        </WithStyles(ForwardRef(Typography))>
        <div
          className="makeStyles-buttonContainer-2"
        >
          <WithStyles(ForwardRef(Button))
            className="makeStyles-downloadButton-6"
            color="primary"
            onClick={[MockFunction]}
            variant="contained"
          >
            <DownloadIcon />
            Download report results
          </WithStyles(ForwardRef(Button))>
          <WithStyles(ForwardRef(Button))
            className="makeStyles-restartButton-7"
            onClick={[Function]}
            variant="outlined"
          >
            Restart test
          </WithStyles(ForwardRef(Button))>
        </div>
        <Hidden
          mdDown={true}
        >
          <img
            alt="Some Failed"
            className="makeStyles-illustration-8"
            src="test-file-stub"
          />
        </Hidden>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-resultsList-3"
        item={true}
        lg={5}
      >
        <div
          className="makeStyles-resultContainer-4"
        >
          <div
            className="makeStyles-iconContainer-5"
          >
            <CheckMark />
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-gutterBottom-10"
              variant="h3"
            >
              Device & Network Setup
            </WithStyles(ForwardRef(Typography))>
          </div>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-gutterBottom-10"
            variant="body1"
          >
            Audio and video successfully received from your hardware and browser.
          </WithStyles(ForwardRef(Typography))>
          <div
            className="makeStyles-buttonContainer-2"
          >
            <WithStyles(ForwardRef(Button))
              onClick={[Function]}
              variant="outlined"
            >
              Review hardware
            </WithStyles(ForwardRef(Button))>
            <WithStyles(ForwardRef(Button))
              onClick={[Function]}
              variant="outlined"
            >
              Review browser
            </WithStyles(ForwardRef(Button))>
          </div>
        </div>
        <div
          className="makeStyles-resultContainer-4"
        >
          <div
            className="makeStyles-iconContainer-5"
          >
            <CheckMark />
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-gutterBottom-10"
              variant="h3"
            >
              Connectivity
            </WithStyles(ForwardRef(Typography))>
          </div>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-gutterBottom-10"
            variant="body1"
          >
            All connections are working successfully.
          </WithStyles(ForwardRef(Typography))>
          <WithStyles(ForwardRef(Button))
            onClick={[Function]}
            variant="outlined"
          >
            Review connectivity
          </WithStyles(ForwardRef(Button))>
        </div>
        <div
          className="makeStyles-resultContainer-4"
        >
          <div
            className="makeStyles-iconContainer-5"
          >
            <SmallError />
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-gutterBottom-10"
              variant="h3"
            >
              Quality & Performance
            </WithStyles(ForwardRef(Typography))>
          </div>
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-gutterBottom-10"
            variant="body1"
          >
            Your overall score is 
            <strong>
              suboptimal
            </strong>
             which means that your connection isn't good enough to run video properly. Try out these tips and rerun the test.
          </WithStyles(ForwardRef(Typography))>
          <WithStyles(ForwardRef(Button))
            onClick={[Function]}
            variant="outlined"
          >
            Review performance
          </WithStyles(ForwardRef(Button))>
        </div>
      </WithStyles(ForwardRef(Grid))>
    </div>
  </WithStyles(ForwardRef(Container))>
</Fragment>
`;
